# Omnidirectional-Wheel

./: .mxproject  CMakeLists.txt  Omnidirectional Wheel.ioc  STM32F407IGHx_FLASH.ld
.claude/: settings.json
Algorithm/inc/: USER_PID.h
Algorithm/src/: USER_PID.c
Application/inc/: Chassis.h  Error.h  Gimbal.h  Motor_Task.h  Robot_Control.h  Rotate.h
Application/src/: Chassis.c  Error.c  Gimbal.c  Motor_Task.c  Robot_Control.c  Rotate.c
BSP/inc/: USER_CAN.h
BSP/src/: USER_CAN.c
Core/Inc/: FreeRTOSConfig.h  app_tasks.h  imu_attitude.h  main.h  stm32f4xx_it.h  struct_typedef.h  tim.h
Core/Src/: app_tasks.c  can.c  dma.c  freertos.c  gpio.c  imu_attitude.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Device/inc/: Motor_Drv.h  Remote.h
Device/src/: Buzzer.c  Motor_Drv.c  Remote.c
IMU/inc/: imu_attitude.h
IMU/src/: imu_attitude.c
MDK-ARM/: Auto_FcArm_Cmd_inp.Bak  Omnidirectional Wheel.uvguix.CHAMP  Omnidirectional Wheel.uvoptx  Omnidirectional Wheel.uvprojx  startup_stm32f407xx.lst
MDK-ARM/Omnidirectional Wheel/: Omnidirectional Wheel.axf  Omnidirectional Wheel.build_log.htm  Omnidirectional Wheel.hex  Omnidirectional Wheel.htm  Omnidirectional Wheel.lnp  Omnidirectional Wheel.map  Omnidirectional Wheel_Omnidirectional Wheel.dep  app_tasks.crf  app_tasks.d  basicmathfunctions.crf  basicmathfunctions.d  basicmathfunctionsf16.crf  basicmathfunctionsf16.d  bayesfunctions.crf  bayesfunctions.d  bayesfunctionsf16.crf  bayesfunctionsf16.d  bmi088driver.crf  bmi088driver.d  bmi088middleware.crf  bmi088middleware.d  buzzer.d  can.crf  can.d  chassis.d  cmsis_os.crf  cmsis_os.d  commontables.crf  commontables.d  commontablesf16.crf  commontablesf16.d  complexmathfunctions.crf  complexmathfunctions.d  complexmathfunctionsf16.crf  complexmathfunctionsf16.d  controllerfunctions.crf  controllerfunctions.d  croutine.crf  croutine.d  distancefunctions.crf  (+129 more)
MDK-ARM/RTE/_Omnidirectional_Wheel/: RTE_Components.h
cmake/: arm-none-eabi-gcc.cmake
others/Drv/inc/: Buzzer.h  Motor_Drv.h  Remote.h  USER_CAN.h  USER_PID.h  motor.h
others/Drv/src/: Buzzer.c  Motor_Drv.c  Remote.c  USER_CAN.c  USER_PID.c  motor.c
